k8s-practice/edx/cust3/rsvp-web-customer-3-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp-customer3
  labels:
    app: rsvp-customer3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsvp-customer3
  template:
    metadata:
      labels:
        app: rsvp-customer3
    spec:
      containers:
      - name: rsvp-app
        image: teamcloudyuga/rsvpapp
        ports:
        - containerPort: 5000
          name: web-port
