k8s-practice/edx/cust3/rsvp-web-service-customer-3.yml
apiVersion: v1
kind: Service
metadata:
  name: rsvp-customer3
  labels:
    app: rsvp-customer3
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: web-port
    protocol: TCP
  selector:
    app: rsvp-customer3
